WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32044
Inspector crashes when collecting on every allocation
https://bugs.webkit.org/show_bug.cgi?id=32044
Summary
Inspector crashes when collecting on every allocation
Oliver Hunt
Reported
2009-12-01 17:30:55 PST
Enable the flag to collect on every allocation in collector.cpp and a bunch of inspector tests crash.
Attachments
Patch
(3.02 KB, patch)
2009-12-01 17:35 PST
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-12-01 17:35:37 PST
Created
attachment 44115
[details]
Patch
Maciej Stachowiak
Comment 2
2009-12-01 17:36:39 PST
Comment on
attachment 44115
[details]
Patch r=me
Oliver Hunt
Comment 3
2009-12-01 17:42:37 PST
Committed
r51572
Eric Seidel (no email)
Comment 4
2009-12-01 17:43:21 PST
Curious if this is suspected to be related to
bug 30835
.
Oliver Hunt
Comment 5
2009-12-01 17:49:15 PST
(In reply to
comment #4
)
> Curious if this is suspected to be related to
bug 30835
.
Unsure -- there are clearly still problems in the inspector in conjunction with GC as collect on every allocation results in a non-functioning console.
Alexey Proskuryakov
Comment 6
2009-12-02 10:01:34 PST
> Committed
r51572
So, resolving as fixed. Please re-open and explain if you left this open intentionally.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug