Inspector crashes when collecting on every allocation https://bugs.webkit.org/show_bug.cgi?id=32044

Reviewed by Maciej Stachowiak.

The crash is caused by the prototype wrapper object getting collected
when allocating the object that is going to use it as a prototype.
Because the only reference to the prototype wrapper is through the
new object's Structure it does not get marked automatically.

Canonical link: https://commits.webkit.org/42999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51572 268f45cc-cd09-0410-ab3c-d52691b4dbfc